# f451-uploader

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/f451_cloud/: __init__.py  __main__.py  cloud.py  settings.example
src/f451_uploader/: __init__.py  __main__.py  uploader.py
tests/: test_cloud.py  test_uploader.py
