[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "f451-uploader"
description = "f451 Labs Uploader module"
readme = "README.md"
authors = [{name = "Martin Lanser", email = "martinlanser@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["uploader", "f451"]
dependencies = [
    'tomli; python_version < "3.11"',
    "adafruit-io",
    "arduino-iot-client",
    "requests",
    "requests-oauthlib"
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black", 
    "bumpver", 
    "isort", 
    "pip-tools", 
    "pytest",
    "pytest-random"
]

[project.urls]
Homepage = "https://github.com/mlanser/f451-uploader"

[project.scripts]
realpython = "uploader.__main__:main"

[tool.bumpver]
current_version = "0.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"']
"src/f451_uploader/__init__.py" = ['__version__ = "{version}"']
"README.md" = ['v{version}$']
